fix popup out of screen @500px

--- a/src/components/PopupWithForm/PopupWithForm.css
+++ b/src/components/PopupWithForm/PopupWithForm.css
@@ -101,7 +101,7 @@
   z-index: 2;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 550px) {
   .popup {
     width: 100%;
     position: absolute;
